--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,17 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
+  release:
+    types: [published]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: slack-send
-        # You may pin to the exact commit or the version.
-        # uses: slackapi/slack-github-action@16b6c78ee73689a627b65332b34e5d409c7299da
         uses: slackapi/slack-github-action@v1.18.0
         with:
-          # JSON payload to send to Slack if webhook route. If not supplied, json from GitHub event will be sent instead
           payload: |
             {
               "icon": ":js:",
