--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,17 +17,18 @@ jobs:
               "icon": ":js:",
               "project": "NODE Wrapper",
               "version": "${{ github.event.release.tag_name }}",
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "${{ github.event.release.body }}"
+              "changes": [
+                "text": "Santi!: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+                "blocks": [
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "${{ github.event.release.body }}"
+                    }
                   }
-                }
-              ],
-              "changes": ${{ github.event.release.body }},
-              "release": "${{ github.event.release }}"
+                ]
+              ]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
