--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":js: A new version of NODE Wrapper has been released: ${{ github.event.release.tag_name }}"
+                    "text": ":js: A new version of `node-onfleet` has been released: `${{ github.event.release.tag_name }}`"
                   },
                   "accessory": {
                     "type": "button",
