--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,6 @@ updates:
     schedule:
       interval: "monthly"
     open-pull-requests-limit: 1
+    commit-message:
+      # Prefix all commit messages with "npm"
+      prefix: "[npm]"
